update dorm
